--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Odin Recipes</h1>
     
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="recipes/pasta.html">Pasta Recipe</a>
+    <a href="recipes/chicken.html">Chicken Recipe</a>
 
 </body>
 </html>
