--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,8 +9,10 @@
 </head>
 
 <body style="width: 500px;">
+    <a href="../index.html">Home</a>
+    
     <h1>Lasagna Recipe</h1>
-    <img src="Lasagna.jpg" style="width: 300px;">
+    <img src="lasagna.jpg" style="width: 300px;">
 
     <h2>Description</h2>
     <p>
