Add css, update index structure and update README

--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
-    <a href="recipes/pasta.html">Pasta Recipe</a>
-    <a href="recipes/chicken.html">Chicken Recipe</a>
 
+<body>
+    <div>
+        <nav>
+            <a href="index.html">
+                <h1>Odin Recipes</h1>
+            </a>
+        </nav>
+
+        <section>
+            <div class="card">
+                <a href="recipes/lasagna.html">
+                    <img src="recipes/lasagna.jpg" alt="Lasagna Photo">
+                    Lasagna Recipe
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="recipes/pasta.html">
+                    <img src="recipes/pasta.jpg" alt="Pasta Photo">
+                    Pasta Recipe
+                </a>
+            </div>
+
+            <div class="card">
+                <a href="recipes/chicken.html">
+                    <img src="recipes/chicken.jpg" alt="Chicken Photo">
+                    Chicken Recipe
+                </a>
+            </div>
+        </section>
+
+    </div>
 </body>
+
 </html>
