--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,51 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes: Lasagna</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body style="width: 500px;">
-    <a href="../index.html">Home</a>
-    
-    <h1>Lasagna Recipe</h1>
-    <img src="lasagna.jpg" style="width: 300px;">
+<body>
+    <div>
+        <nav>
+            <a href="../index.html">
+                <h1>Odin Recipes</h1>
+            </a>
+        </nav>
 
-    <h2>Description</h2>
-    <p>
-        Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect
-        dish to bring to a potluck. It freezes well. It reheats well.
-        Leftovers will keep you happy for days.
-    </p>
+        <h1>Lasagna Recipe</h1>
+        <img src="lasagna.jpg" alt="Lasagna Photo">
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Olive oil, for coating baking dish</li>
-        <li>9 to 12 lasagna noodles</li>
-        <li>1 cup ricotta cheese</li>
-        <li>1 egg</li>
-        <li>1/4 cup grated Parmigiano-Reggiano</li>
-        <li>Zest of 1 fresh lemon</li>
-        <li>1/2 teaspoon kosher or sea salt, or to taste</li>
-        <li>Fresh cracked black pepper, to taste</li>
-        <li>24 ounces tomato sauce</li>
-        <li>2 cups cooked chicken</li>
-        <li>16 ounces (1 pound) grated mozzarella cheese</li>
-    </ul>
+        <h2>Description</h2>
+        <p>
+            Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect
+            dish to bring to a potluck. It freezes well. It reheats well.
+            Leftovers will keep you happy for days.
+        </p>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat oven to 375°. Lightly coat a 2-quart baking dish with olive oil and set aside.</li>
-        <li>Cook lasagna noodles until al dente according to package instructions. Rinse under cold water until cool.
-            Lay the cooked pasta flat and set aside.</li>
-        <li>In a medium bowl, combine the ricotta cheese, egg, Parmigiano-Reggiano, lemon zest, salt and pepper. Set
-            aside.</li>
-        <li>Layer one-third of the remaining tomato sauce over the lasagna noodles and then layer half of the ricotta
-            mixture. Layer half of the chicken over the ricotta and then spread one-third of the mozzarella cheese.
-            Repeat this pattern: noodles, sauce, ricotta cheese, chicken and mozzarella cheese. Add a final layer of
-            lasagna noodles, then add remaining tomato sauce and remaining mozzarella cheese.</li>
-        <li>Bake lasagna for about 45 minutes or until the top cheese is melted and golden.</li>
-        <li>Remove from oven; allow to cool for about 10 to 15 minutes before serving.</li>
-    </ol>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Olive oil, for coating baking dish</li>
+            <li>9 to 12 lasagna noodles</li>
+            <li>1 cup ricotta cheese</li>
+            <li>1 egg</li>
+            <li>1/4 cup grated Parmigiano-Reggiano</li>
+            <li>Zest of 1 fresh lemon</li>
+            <li>1/2 teaspoon kosher or sea salt, or to taste</li>
+            <li>Fresh cracked black pepper, to taste</li>
+            <li>24 ounces tomato sauce</li>
+            <li>2 cups cooked chicken</li>
+            <li>16 ounces (1 pound) grated mozzarella cheese</li>
+        </ul>
 
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat oven to 375°. Lightly coat a 2-quart baking dish with olive oil and set aside.</li>
+            <li>Cook lasagna noodles until al dente according to package instructions. Rinse under cold water until
+                cool.
+                Lay the cooked pasta flat and set aside.</li>
+            <li>In a medium bowl, combine the ricotta cheese, egg, Parmigiano-Reggiano, lemon zest, salt and pepper. Set
+                aside.</li>
+            <li>Layer one-third of the remaining tomato sauce over the lasagna noodles and then layer half of the
+                ricotta
+                mixture. Layer half of the chicken over the ricotta and then spread one-third of the mozzarella cheese.
+                Repeat this pattern: noodles, sauce, ricotta cheese, chicken and mozzarella cheese. Add a final layer of
+                lasagna noodles, then add remaining tomato sauce and remaining mozzarella cheese.</li>
+            <li>Bake lasagna for about 45 minutes or until the top cheese is melted and golden.</li>
+            <li>Remove from oven; allow to cool for about 10 to 15 minutes before serving.</li>
+        </ol>
+    </div>
 </body>
 
 </html>
