--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -6,37 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes: Pasta</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body style="max-width: 500px;">
-    <a href="../index.html">Home</a>
+<body>
+    <div>
+        <nav>
+            <a href="../index.html">
+                <h1>Odin Recipes</h1>
+            </a>
+        </nav>
 
-    <h1>Pasta Recipe</h1>
-    <img src="pasta.jpg" style="width: 300px;">
+        <h1>Pasta Recipe</h1>
+        <img src="pasta.jpg" alt="Pasta Photo">
 
-    <h2>Description</h2>
-    <p>
-        Everyone loves a good pasta, right? It's a great way to feed a crowd and a perfect
-        dish to bring to a potluck. It freezes well. It reheats well.
-        Leftovers will keep you happy for days.
-    </p>
+        <h2>Description</h2>
+        <p>
+            Everyone loves a good pasta, right? It's a great way to feed a crowd and a perfect
+            dish to bring to a potluck. It freezes well. It reheats well.
+            Leftovers will keep you happy for days.
+        </p>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>3/4 pound linguine</li>
-        <li>1 cup grated pecorino cheese</li>
-        <li>2 tablespoons unsalted butter</li>
-        <li>2 teaspoons coarsely ground smoked or regular peppercorns</li>
-        <li>Salt</li>
-    </ul>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>3/4 pound linguine</li>
+            <li>1 cup grated pecorino cheese</li>
+            <li>2 tablespoons unsalted butter</li>
+            <li>2 teaspoons coarsely ground smoked or regular peppercorns</li>
+            <li>Salt</li>
+        </ul>
 
-    <h2>Steps</h2>
-    <ol>
-        <li>In a pot of boiling salted water, cook the pasta until al dente. Drain, reserving 2/3 cup of the cooking
-            water; return the pasta to the pot. Add the cheese, butter, pepper and cooking water and toss. Season with
-            salt and serve.</li>
-    </ol>
-
+        <h2>Steps</h2>
+        <ol>
+            <li>In a pot of boiling salted water, cook the pasta until al dente. Drain, reserving 2/3 cup of the cooking
+                water; return the pasta to the pot. Add the cheese, butter, pepper and cooking water and toss. Season
+                with
+                salt and serve.</li>
+        </ol>
+    </div>
 </body>
 
 </html>
